[package]
name = "example-openai-deep-research-agent-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A recursive Deep Research Assistant powered by OpenAI and Resonate's Rust SDK."

[[bin]]
name = "research"
path = "src/main.rs"

[dependencies]
resonate = { package = "resonate-sdk", git = "https://github.com/resonatehq/resonate-sdk-rs", branch = "main" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
